Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -27,7 +27,7 @@ papers:
       assimilation and de‐assimilation; and how constraints can evolve as a
       result of neutral changes in the ontogenic niche (not only the genotype).
       We argue that evolutionary thinking can benefit from a framework for
-      evolution with conceptual foundations at the organismal level.."
+      evolution with conceptual foundations at the organismal level."
     authors: Vargas, A. O., Botelho, J. F. & Mpodozis, J. (2020)
     link:
       display: "The Journal of Experimental Zoology Part B: Molecular and
