Update Listas “noticias”

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,7 +1,3 @@
 entradas:
-  - date: 02/03/2019
-    headline: "Sorpresa: La homeopatía sigue sin funcionar."
-  - date: 05/03/2019
-    headline: Así se verá la página web.
-  - date: 19/08/2020
-    headline: Estamos trabajando para usted...
+  - date: 23/01/2021
+    headline: Actualización en breve.
