Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2180,7 +2180,8 @@ papers:
     link:
       display: "Visual Neuroscience, 11, (2), 401-409. doi: 10.1017/S0952523800001747."
       url: https://www.cambridge.org/core/journals/visual-neuroscience/article/retinal-targets-of-centrifugal-neurons-and-the-retinal-neurons-projecting-to-the-accessory-optic-system/8DC99FE1976B46AA4EB173C4FAD5D102
-    authors: Britto, Luiz R.G., Gottlieb, M., Marin, G., Rojas, X., & Wallman, J. (1994)
+    authors: Nickla, D., Gottlieb, M., Marin, G., Rojas, X., Britto, L., & Wallman,
+      J. (1994)
   - highlight: 0
     title: "Effects of retinal lesions upon the distribution of nicotinic
       acetylcholine receptor subunits in the chick visual system. "
