Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -32,7 +32,7 @@ papers:
       N., Mpodozis, J., & Marín, G.J. (2020)
     link:
       url: https://www.nature.com/articles/s41598-020-72848-0
-      display: "Scientific Reports 10, 16220. doi: 10.1038/s41598-020-72848-0."
+      display: "Scientific Reports, 10, 16220: 1-16. doi: 10.1038/s41598-020-72848-0."
   - highlight: 1
     title: "The evolutionary consequences of epigenesis and neutral change: A
       conceptual approach at the organismal level."
