Update Listas “noticias”

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,36 @@
 entradas:
-  - date: 23/01/2021
-    headline: Actualización en breve.
+  - date: 27/01/2021
+    headline: >-
+      **Dos proyectos Fondecyt Regular 2021 fueron adjudicados por académicos
+      del Laboratorio de Neurobiología y Biología del Conocer (RayoLab).**
+
+
+
+
+      <!--StartFragment-->
+
+
+      ## Prof. Gonzalo Marín Gamé (Investigador Asociado, Departamento de Biología):
+
+
+      **“Postnatal development of the colliculofugal visual system in Octodon degus: A new model to investigate how early neural activity shapes neural pathways and behavior” (“Desarrollo postnatal del sistema visual colículofugal en Octodon degus: Un nuevo modelo para investigar cómo la experiencia visual temprana da forma a las vías neurales y la conducta”).**
+
+
+      **El proyecto se enmarca en el estudio de cómo la actividad neuronal influencia el desarrollo de la conectividad entre las neuronas y, por lo tanto, en la maduración de los circuitos neuronales.** En general, gran parte de la actividad neuronal temprana ocurre espontáneamente antes del nacimiento y esto ayuda al desarrollo de los circuitos sensomotores. Posteriormente, la actividad generada por la propia conducta del animal contribuye a sintonizar estos circuitos, especialmente los corticales, a las demandas del medio. **El caso del ratón endémico chileno *Octodon degus*, es particularmente interesante porque nuestros estudios indican que nace con un sistema visual extremadamente inmaduro** y, sin embargo, a diferencia del ratón común, es visualmente activo desde los primeros días de nacimiento. Esto sugiere que la experiencia visual temprana juega un rol preponderante en el desarrollo del sistema visual de esta especie, que por lo tanto **representa un modelo ideal para profundizar en esta temática, que sigue siendo central en neurociencia.**
+
+
+      ## Dr. Jorge Mpodozis Marín (Departamento de Biología): 
+
+
+      ***“Ontogenic development of the ascending sensory pathways in birds: the visual tectofugal pathway as a case in point”(“Desarrollo ontogénico de las vías sensoriales ascendentes en aves: La vía visual tectofugal como un caso de estudio”).*** 
+
+
+      En este proyecto **se implementará una batería de métodos moleculares, fisiológicos y anatómicos "in ovo" y "ex vivo"** para realizar un estudio detallado de la línea temporal del establecimiento **de la conectividad anatómica y funcional de las etapas centrales (talamo-pallial -intrapalial) de las vía tectofugal visual en pollos.** También estudiaremos la influencia de las etapas periféricas de la vía en el establecimiento y maduración de la conectividad de las etapas centrales. **Paralelamente, estudiaremos el desarrollo del perfil molecular de las principales estructuras del palio (telencéfalo) visual, en relación tanto con el desarrollo de la conectividad intrapalial como con la actividad de los estadios periféricos.** Finalmente, intentaremos dilucidar la aparición de los diferentes fenotipos moleculares expresados por los principales tipos de células del palio visual aviar. Creemos que esta investigación es relevante, ya que **sus resultados contribuirán a llenar un gran vacío en el conocimiento actual sobre el origen y evolución del cerebro amniota.**
+
+
+      <!--EndFragment-->
+
+
+
+
+      Fuente: http://ciencias.uchile.cl/noticias/172947/nueve-proyectos-se-adjudico-nuestra-facultad-en-fondecyt-regular-2021
